force-app/main/default/objects/Job_Posting__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <label>Created Time</label>
    <type>DateTime</type>
</CustomField>