force-app/main/default/objects/Job_Posting__c/fields/Is_remote_Job__c.field-meta.xml
<CustomField>
    <fullName>Is_remote_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is remote Job</label>
    <type>Checkbox</type>
</CustomField>