force-app/main/default/objects/Job_Posting__c/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>