force-app/main/default/objects/Job_Posting__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Job Posting</relationshipLabel>
    <relationshipName>Job_Posting</relationshipName>
    <type>Lookup</type>
</CustomField>